@@ -1,3 +1,8 @@
+2000-10-25  Havoc Pennington  <hp@pobox.com>
+
+	* wrappers/gtk/gconf-client.c: remove get_nocopy, since it can't
+	be implemented since we don't cache everything. Oops.
+
 2000-10-16  Havoc Pennington  <hp@pobox.com>
 
 	* wrappers/gtk/gconf-client.c
